# pthread-async

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
include/: async_task.hpp  result.hpp
src/: main.cpp
tests/: test_async.cpp  test_result.cpp  test_sdk_lifecycle.cpp
